# vulkan-triangle-modern

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  make.bat  makefile  shaders.h  triangle.vert  vulkan-triangle-modern.code-workspace
src/: main.cpp  shaders.h  shaders.slang  triangle.frag  triangle.vert
